--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation 'javax.inject:javax.inject:1'
 //    implementation 'org.springframework.boot:spring-boot-devtools'
 //    implementation 'org.springframework.boot:spring-boot-starter-web'
 //    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
